# julius-tf

./: LICENSE  Makefile  README.md  bench.md  pyproject.toml
.github/workflows/: coverage.yml  documentation.yml  linter.yml  publish.yml  tests.yml
bench/: fftconv.py  gen.py  lowpass.py  resample.py
julius/: __init__.py  bands.py  core.py  fftconv.py  filters.py  lowpass.py  resample.py  utils.py
pdoc/: config.mako
tests/: test_bands.py  test_doc.py  test_fftconv.py  test_filters.py  test_lowpass.py  test_resample.py
