[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "julius"
version = "0.2.8"
description = "Nice DSP sweets: resampling, FFT Convolutions. All with PyTorch, differentiable and with CUDA support."
readme = "README.md"
requires-python = ">=3.9.0"
license = { text = "MIT License" }
authors = [
    { name = "Alexandre Défossez", email = "alexandre.defossez@gmail.com" },
]
dependencies = ["torch>=1.13.0"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/adefossez/julius"

[project.optional-dependencies]
dev = [
    # Lower bounds matter: the tests CI runs `--resolution lowest-direct`, which
    # otherwise pulls ancient, unbuildable releases (e.g. coverage 3.0).
    "coverage>=7.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "onnx>=1.13",
    "pdoc3>=0.10",
    "resampy==0.4.3",
    # Pin numpy alongside torch: `--resolution lowest-direct` lowers torch to 1.13,
    # which has the numpy-1 ABI and breaks against numpy 2. Listing numpy as a direct
    # dep makes lowest-direct lower it too (1.21), while the default resolution still
    # gets numpy 2 with the latest torch.
    "numpy>=1.21",
    # onnxruntime dropped cp38/cp39 wheels at 1.20; cap it for old Pythons.
    "onnxruntime>=1.16; python_version >= '3.10'",
    "onnxruntime>=1.16,<1.20; python_version < '3.10'",
]

[tool.hatch.build.targets.wheel]
packages = ["julius"]

[tool.hatch.build.targets.sdist]
include = [
    "julius",
    "tests",
    "bench",
    "README.md",
    "LICENSE",
]
# docs/ holds generated HTML and is gitignored; force it into the sdist
# to match the previous MANIFEST.in behavior.
artifacts = ["docs/*/*.html"]
