[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "julius-tf"
version = "0.2.8"
description = "Nice DSP sweets: resampling, FFT Convolutions — a TensorFlow port of Alexandre Défossez's julius, differentiable and with GPU support."
readme = "README.md"
requires-python = ">=3.9.0"
license = { text = "MIT License" }
authors = [
    { name = "Alexandre Défossez", email = "alexandre.defossez@gmail.com" },
    { name = "Clément Laroche", email = "clement.laroche@gmail.com" },
]
maintainers = [
    { name = "Clément Laroche", email = "clement.laroche@gmail.com" },
]
dependencies = ["tensorflow>=2.11.0"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/LarocheC/julius-tf"
Repository = "https://github.com/LarocheC/julius-tf"
"Original project (PyTorch)" = "https://github.com/adefossez/julius"

[project.optional-dependencies]
dev = [
    # Lower bounds matter: the tests CI runs `--resolution lowest-direct`, which
    # otherwise pulls ancient, unbuildable releases (e.g. coverage 3.0).
    "coverage>=7.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pdoc3>=0.10",
    # resampy is used as a reference implementation when validating resampling.
    "resampy==0.4.3",
    "numpy>=1.21",
]

[tool.mypy]
# TensorFlow does not ship inline type information (no py.typed marker), so mypy
# would otherwise fail with `import-untyped` errors. Treat it as untyped instead.
[[tool.mypy.overrides]]
module = ["tensorflow", "tensorflow.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["julius"]

[tool.hatch.build.targets.sdist]
include = [
    "julius",
    "tests",
    "bench",
    "README.md",
    "LICENSE",
]
# docs/ holds generated HTML and is gitignored; force it into the sdist
# to match the previous MANIFEST.in behavior.
artifacts = ["docs/*/*.html"]
